contrast fix #3

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,3 +34,9 @@ details[open] summary~* {
 }
 
 .w3-codespan{background-color:#f4f4f4 }
+
+h1 {
+  background-color: rgba(61, 61, 61, 0.466);
+  padding: 0 15px;
+  width: 100%;
+}
